# hydra-math-swift

./: .gitignore  HydraMath.podspec  LICENSE  README.md
Example/HydraMath.xcodeproj/: project.pbxproj
Example/HydraMath.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Example/HydraMath.xcodeproj/xcshareddata/xcschemes/: HydraMath-Example.xcscheme
Example/Tests/: StableswapTests.swift
HydraMath/: HydraMath.podspec
HydraMath/Classes/: Stableswap.swift
HydraMath/Example/: Podfile
HydraMath/Example/HydraMath.xcodeproj/: project.pbxproj
HydraMath/Example/HydraMath.xcworkspace/: contents.xcworkspacedata
HydraMath/Example/Tests/: Tests.swift
HydraMath/HydraMath/Classes/: Stableswap.swift
HydraMath/lib/include/: hydra-dx.h
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs
